<resources>
    <string name="app_name">ProjetoIntegrador</string>
    <string name="options_home">SELECIONE UMA DAS OPÇÕES ABAIXO</string>
    <string name="administrative">ÁREA ADMINISTRATIVA</string>
    <string name="problem">INFORMAR PROBLEMA DE ILUMINAÇÃO PÚBLICA</string>
    <string name="code_list">SELECIONE O CÓDIGO ENCONTRADO NO QRCODE</string>
    <string name="light_pole_1">PI-III - 0001</string>
    <string name="light_pole_2">PI-III - 0002</string>
    <string name="light_pole_3">PI-III - 0003</string>
    <string name="light_pole_4">PI-III - 0004</string>
    <string name="light_pole_5">PI-III - 0005</string>
    <string name="light_pole_6">PI-III - 0006</string>
    <string name="light_pole_title">POSTE DE ILUMINAÇÃO</string>
    <string name="light_pole_code">CÓDIGO</string>
    <string name="light_pole_street">RUA</string>
    <string name="light_pole_district">BAIRRO</string>
    <string name="light_pole_city">CIDADE</string>
    <string name="data_confirmation">OS DADOS ESTÃO CORRETOS?</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="hint_name">INSIRA SEU NOME</string>
    <string name="hint_cpf">INSIRA SEU CPF</string>
    <string name="hint_phone_number">INSIRA SEU TELEFONE</string>
    <string name="hint_description">O poste em questão emite um baru\nlho de eletricidade em dias de chu\nva e está apagado desde o mês \npassado, setembro. È preocupante \npara os moradores pois fica em \numa região bem escura do bairro</string>
    <string name="hint_email">DIGITE SEU EMAIL</string>
    <string name="hint_password">DIGITE SUA SENHA</string>
    <string name="send">CADASTRAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="enter">ENTRAR</string>
    <string name="confirmation_message">RECLAMAÇÃO ENVIADA</string>
    <string name="contact_soon">RETORNAREMOS EM BREVE\nNO E-MAIL INFORMADO</string>
    <string name="finish_bottom">IR PARA TELA INICIAL</string>
    <string name="register_bottom">criar conta</string>
    <string name="list_bottom">histórico de reclamações</string>
    <string name="logout">SAIR</string>
    <string name="op_failed">não foi possível concluir a operação. Tente novamente</string>
    <string name="new_claim">Registrar nova reclamação</string>
    <string name="scan_qrcode">LEITOR DE QRCODE</string>
    <string name="empty_list">Não há items favoritados!</string>
    <string name="hello">Olá, Mariana</string>


    <!-- Descriptions-->

    <string name="description_splash">Imagem tirada de cima da cidade de Bertioga à noite com as casas iluminadas e a praia ao lado</string>

</resources>