<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.confirmation.view.ConfirmationFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        android:text="@string/light_pole_title"
        android:textColor="@color/purple"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/size_70"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCodeLightCode"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_50"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_code"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btnCodeLightStreet"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif"
        android:text="@string/light_pole_street"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCodeLightCode" />

    <Button
        android:id="@+id/btnbtnCodeLightNeighborhood"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_district"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCodeLightStreet" />

    <Button
        android:id="@+id/btnCodeLightCity"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_city"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnbtnCodeLightNeighborhood" />

    <TextView
        android:id="@+id/tvDataConfirmation"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:text="@string/data_confirmation"
        android:textColor="@color/purple"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/size_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCodeLightCity"/>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/red"
        android:text="@string/yes"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNo"
        app:layout_constraintTop_toBottomOf="@id/tvDataConfirmation" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:backgroundTint="@color/red"
        android:text="@string/no"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toEndOf="@id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDataConfirmation" />

</androidx.constraintlayout.widget.ConstraintLayout>