<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.lightPoleList.view.LightPoleListFragment">

    <TextView
        android:id="@+id/tvOptionsList"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        android:text="@string/options_home"
        android:textColor="@color/purple"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/size_70"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnLightPole1"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_50"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_1"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOptionsList" />

    <Button
        android:id="@+id/btnLightPole2"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_21"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_2"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLightPole1" />

    <Button
        android:id="@+id/btnLightPole3"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_21"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_3"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLightPole2" />

    <Button
        android:id="@+id/btnLightPole4"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_21"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_4"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLightPole3" />

    <Button
        android:id="@+id/btnLightPole5"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_21"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_5"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLightPole4" />

    <Button
        android:id="@+id/btnLightPole6"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_60"
        android:layout_marginTop="@dimen/size_21"
        android:backgroundTint="@color/orange"
        android:text="@string/light_pole_6"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLightPole5" />

</androidx.constraintlayout.widget.ConstraintLayout>