<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.view.DetailFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        android:text="@string/light_pole_title"
        android:textColor="@color/purple"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/size_70"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnCodeLightCode"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50"
        android:padding="@dimen/text_10"
        android:background="@color/orange"
        android:text="@string/light_pole_code"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/btnCodeLightStreet"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:padding="@dimen/text_10"
        android:background="@color/orange"
        android:fontFamily="sans-serif"
        android:text="@string/light_pole_street"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCodeLightCode" />

    <TextView
        android:id="@+id/btnbtnCodeLightNeighborhood"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:padding="@dimen/text_10"
        android:background="@color/orange"
        android:text="@string/light_pole_district"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCodeLightStreet" />

    <TextView
        android:id="@+id/btnCodeLightCity"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:padding="@dimen/text_10"
        android:background="@color/orange"
        android:text="@string/light_pole_city"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnbtnCodeLightNeighborhood" />

</androidx.constraintlayout.widget.ConstraintLayout>