<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.login.view.LoginFragment">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_30"
        android:layout_marginTop="@dimen/size_100"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:autofillHints="name"
        android:maxLength="40"
        android:maxLines="1"
        android:textColorHint="@color/light_dark"
        android:textColor="@color/light_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_30"
        android:layout_marginTop="@dimen/size_20"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:autofillHints="no"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/light_dark"
        android:textColorHint="@color/light_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <TextView
        android:id="@+id/tvRegister"
        android:textAlignment="viewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_5"
        android:text="@string/register_bottom"
        android:textColor="@color/light_dark"
        android:textSize="@dimen/text_12"
        android:layout_marginEnd="@dimen/size_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/size_100"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_70"
        android:text="@string/send"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>