<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray"
    tools:context=".ui.home.view.HomeFragment">

    <TextView
        android:id="@+id/tvOptions"
        android:layout_width="@dimen/size_200"
        android:layout_height="wrap_content"
        android:text="@string/options_home"
        android:textColor="@color/purple"
        android:textAlignment="center"
        android:textSize="@dimen/text_18"
        android:layout_marginTop="@dimen/size_100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnProblems"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_70"
        android:layout_marginTop="@dimen/size_70"
        android:backgroundTint="@color/orange"
        android:text="@string/problem"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOptions" />

    <Button
        android:id="@+id/btnAdministrative"
        android:layout_width="@dimen/size_300"
        android:layout_height="@dimen/size_70"
        android:layout_marginTop="@dimen/size_70"
        android:backgroundTint="@color/red"
        android:text="@string/administrative"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnProblems" />

</androidx.constraintlayout.widget.ConstraintLayout>